--- a/src/app/components/MainContent/Projects/Projects.css
+++ b/src/app/components/MainContent/Projects/Projects.css
@@ -50,7 +50,7 @@
   flex-direction: column;
   padding-bottom: 5rem;
   padding-inline: 1.5rem;
-  row-gap: 4rem;
+  row-gap: 6rem;
 }
 
 @media screen and (min-width: 720px) {
@@ -74,6 +74,7 @@
 
   .projects__list {
     flex-direction: row;
-    gap: 4rem;
+    flex-wrap: wrap;
+    column-gap: 4rem;
   }
 }
